# miltr

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Readme.md  docker-compose.yml  milter-protocol.txt
.github/workflows/: run-tests.yaml
client/: CHANGELOG.md  Cargo.toml  Readme.md
client/examples/: print_client.rs
client/src/: lib.rs
common/: CHANGELOG.md  Cargo.toml
common/src/actions/: to_mta_only.rs
common/src/commands/: header.rs
common/src/optneg/: macros.rs
scripts/: copy-coverage.sh
server/: CHANGELOG.md  Cargo.toml  Readme.md
server/examples/: basic_modifications.rs  catch_body.rs  print_server.rs
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: decoder.rs
server/src/: lib.rs  milter.rs
server/tests/: integration_test.rs  mod.rs
server/tests/actions/: bidirectional.rs  mod.rs  quit.rs  to_mta_only.rs
server/tests/connection/: many_mails.rs  mod.rs
server/tests/integration/: many_mails.rs
server/tests/modifications/: body.rs  headers.rs  macro.rs  mod.rs  quarantine.rs  recipient.rs
server/tests/postfix/config/: main.cf
server/tests/utils/: action_milter.rs  main.cf  milter_mock.rs  mod.rs  portguard.rs  postfix.rs  smtpsink.rs  testcase.rs
tests/: examples.rs
utils/: CHANGELOG.md  Cargo.toml
