[package]
name = "miltr"
version = "0.1.2"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "A miltr protocol implementation in pure rust"

[workspace]
members = ["server", "client", "common", "utils"]
resolver = "2"

[dev-dependencies]
escargot = "0.5.13"
miltr-common = { path = "common" }
miltr-server = { path = "server" }

[dependencies]
async-trait = "0.1.85"
miette = { version = "7.4.0", features = ["fancy"] }
nix = { version = "0.29.0", features = ["signal"] }
