[package]
name = "miltr"
version = "0.2.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "A miltr protocol implementation in pure rust"

[workspace]
members = ["server", "client", "common", "utils"]
resolver = "2"

[dev-dependencies]
escargot = "0.5.15"
miltr-common = { path = "common" }
miltr-server = { path = "server" }

[dependencies]
async-trait = "0.1.89"
miette = { version = "7.6.0", features = ["fancy"] }
nix = { version = "0.30.1", features = ["signal"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
