[package]
name = "miltr-common"
version = "0.1.3"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "A miltr commons library in pure rust"

# MSRV is considered exempt from SemVer upgrades
# Current limitation is: "RPITIT Language Feature"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
count-allocations = ["dep:allocation-counter"]
_fuzzing = []
tracing = ["dep:strum"]

[dependencies]
allocation-counter = { version = "0.8.1", optional = true }
bitflags = "2.9.4"
enum_dispatch = "0.3.13"
itertools = "0.14.0"
num_enum = "0.7.4"
thiserror = "2.0.16"
asynchronous-codec = "0.7.0"
bytes = "1.10.1"
bytecount = "0.6.9"
miltr-utils = { version = "0.1.2", path = "../utils" }
strum = { version = "0.27.2", features = ["derive"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.47.1", features = ["full"] }
rstest = "0.26.1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
cast-possible-truncation = "allow"
