[package]
name = "miltr-server"
version = "0.2.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "A miltr server library in pure rust"

# MSRV is considered exempt from SemVer upgrades
# Current limitation is: "std::os::unix::fs::chown"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
_fuzzing = []

# Utilize tracing (currently unstable)
tracing = ["dep:tracing", "miltr-common/tracing"]

[dependencies]
async-trait = "0.1.89"
asynchronous-codec = "0.7.0"
bytes = "1.10.1"
futures = "0.3.31"
miltr-common = { version = "0.1.3", path = "../common" }
miltr-utils = { version = "0.1.2", path = "../utils" }
thiserror = "2.0.16"
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"], optional = true }

[dev-dependencies]
async-fd-lock = "0.2.0"
async-trait = "0.1.89"
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls"] }
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
cast-possible-truncation = "allow"
